# difflib-rs

./: .gitignore  Cargo.toml  README.md  SWEEP.md  build_wheels.sh  pyproject.toml
src/: difflib.py  difflib_rs.pyi  lib.rs
tests/: test_benchmark.py  test_unified_diff.py  test_unified_diff_str.py  utils.py
