[project]
name = "difflib-rs"
version = "0.1.1"
description = "A Rust implementation of Python's difflib.unified_diff with PyO3 bindings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "maturin>=1.9.3",
    "pytest>=8.4.1",
]
